fix title wrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -107,6 +107,7 @@ body {
     .title {
         font-size: 2em;
         width: 80%;
+        height: 44px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -116,7 +117,7 @@ body {
         font-size: 1.3em;
         display: block;
         margin-bottom: 15px;
-        height: 50px;
+        height: 54px;
         overflow: hidden;
         text-overflow: ellipsis;
     }
